# Cpplearning

./: .gitignore  CMakeLists.txt  README.md
exercises/01_basic_input_output_and_data_types/: README.md  main.cpp
exercises/02_ball_gravity_simulation/: CMakeLists.txt  README.md  main.cpp
exercises/03_strings/: CMakeLists.txt  README.md  main.cpp
exercises/04_stringview/: CMakeLists.txt  README.md  main.cpp
exercises/05_isEven/: CMakeLists.txt  README.md  main.cpp
exercises/06_Operators/: CMakeLists.txt  README.md  main.cpp
exercises/07_bit_manipulation/: CMakeLists.txt  README.md  main.cpp
exercises/08_bitmasks/: CMakeLists.txt
exercises/09_local_scope/: CMakeLists.txt  README.md  main.cpp
exercises/10_constants/: CMakeLists.txt  README.md  constants.h  main.cpp
exercises/11_static_variables/: CMakeLists.txt  README.md  main.cpp
exercises/12_while/: CMakeLists.txt  README.md  main.cpp
exercises/13_Hi_Lo/: README.md  Random.h  main.cpp
exercises/14_Hi_Lo_modifications/: CMakeLists.txt
exercises/15/: CMakeLists.txt  README.md  main.cpp
